@@ -1,4 +1,3 @@
-
 package ch.ethz.origo.jerpa.prezentation.perspective;
 
 import ch.ethz.origo.jerpa.data.JERPAUtils;
@@ -38,8 +37,8 @@ public class EDEDBPerspective extends Perspective {
 
         resourcePath = "ch.ethz.origo.jerpa.jerpalang.perspective.ededb.EDEDB";
         session = new EDEDSession();
-        controller = new Controller(this,session);
-        
+        controller = new Controller(this, session);
+
     }
 
     @Override
@@ -77,7 +76,7 @@ public class EDEDBPerspective extends Perspective {
         try {
             menu.addItem(createEdedbMenu());
             menu.addItem(createEdedbMenu2());
-            
+
             updateMenuItemVisibility();
             menu.addMenuSeparator();
 
@@ -103,20 +102,20 @@ public class EDEDBPerspective extends Perspective {
         disconnect.setResourceBundleKey("menu.ededb.disconnect");
         openDir.setResourceBundleKey("menu.ededb.opendir");
         chooseDir.setResourceBundleKey("menu.ededb.choosedir");
-        
+
         connect.setAction(controller.getActionConnect());
         disconnect.setAction(controller.getActionDisconnect());
         chooseDir.setAction(controller.getActionChooseDownloadFolder());
         openDir.setAction(controller.getActionOpenDownloadPath());
-        
+
         ededbMenu.addSubItem(connect);
         ededbMenu.addSubItem(disconnect);
         ededbMenu.addSubItem(chooseDir);
         ededbMenu.addSubItem(openDir);
-        
+
         return ededbMenu;
     }
-    
+
     private JUIGLEMenuItem createEdedbMenu2() {
         ededbMenu2 = new JUIGLEMenuItem(getLocalizedString("menu2.ededb.title"));
 
@@ -136,7 +135,7 @@ public class EDEDBPerspective extends Perspective {
         ededbMenu2.addSubItem(downloadFile);
         ededbMenu2.addSubItem(analyseFile);
         ededbMenu2.addSubItem(deleteFile);
-        
+
         return ededbMenu2;
     }
 
@@ -145,23 +144,27 @@ public class EDEDBPerspective extends Perspective {
         super.initPerspectivePanel();
         mainPanel = controller.initGraphics();
     }
-    
+
     public void updateMenuItemVisibility() {
-        
-        connect.setVisible(!session.isConnected() && !controller.isFirstRun());
-        disconnect.setVisible(session.isConnected() && !controller.isFirstRun());
-        
-        downloadFile.setEnabled(session.isConnected() && !controller.isFirstRun());
-        analyseFile.setEnabled(session.isConnected() && !controller.isFirstRun());
-        deleteFile.setEnabled(session.isConnected() && !controller.isFirstRun());
+
+        if (!controller.isLock()) {
+
+            connect.setVisible(!session.isConnected() && !controller.isFirstRun());
+            disconnect.setVisible(session.isConnected() && !controller.isFirstRun());
+
+            downloadFile.setEnabled(session.isConnected() && !controller.isFirstRun()
+                    && controller.isOnlineTab());
+            analyseFile.setEnabled(!controller.isFirstRun());
+            deleteFile.setEnabled(!controller.isFirstRun());
+        }
     }
-    
-    public void setMenuItemEnabled(boolean active){
+
+    public void setMenuItemEnabled(boolean active) {
         connect.setEnabled(active);
         disconnect.setEnabled(active);
         openDir.setEnabled(active);
         chooseDir.setEnabled(active);
-        
+
         downloadFile.setEnabled(active);
         analyseFile.setEnabled(active);
         deleteFile.setEnabled(active);
